# tap-adp

./: .pre-commit-config.yaml  README.md  generate_schema.py  meltano.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yml  test.yml
tap_adp/: __init__.py  __main__.py  authenticator.py  client.py  streams.py  tap.py
tap_adp/schemas/: department.json  job_application.json  job_requisition.json  pay_data_input.json  pay_distribution.json  payroll_instruction.json  payroll_output.json  payroll_output_acc.json  questionnaire.json  us_tax_profile.json  worker.json  worker_demographic.json  workers.json
tests/: __init__.py  test_core.py
