[tool.poetry]
name = "tap-adp"
version = "0.0.1"
description = "Singer tap for ADP, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["AutoIDM <support@autoidm.com>"]
keywords = [
    "ELT",
    "ADP",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10"
singer-sdk = { version="~=0.53.2", extras = ["faker",] }
s3fs = { version = "~=2025.10.0", optional = true }
requests = "~=2.32.3"
typing-extensions = {version = ">=4.15.0", python = "<3.12"}

[tool.poetry.group.dev.dependencies]
genson = "~=1.3.0"
mypy = ">=1.18.2"
pytest = ">=8"
singer-sdk = { version="*", extras = ["testing"] }
ty = ">=0.0.1a24"
types-requests = ">=2.32.3"

[tool.poetry.extras]
s3 = ["s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-adp = 'tap_adp.tap:TapADP.cli'
