[project]
name = "tap-adp"
version = "0.0.1"
description = "Singer tap for ADP, built with the Meltano Singer SDK."
authors = [{ name = "AutoIDM", email = "support@autoidm.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "ADP",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk[faker]~=0.53.2",
    "requests~=2.32.3",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
s3 = ["s3fs~=2026.1.0"]

[project.scripts]
tap-adp = "tap_adp.tap:TapADP.cli"

[dependency-groups]
dev = [
    "genson~=1.3.0",
    "mypy>=1.18.2",
    "pytest>=9",
    "singer-sdk[testing]",
    "ty>=0.0.1a24",
    "types-requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = [
  "--durations=10",
]
minversion = "9"

[tool.mypy]
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
